# ireal

./: README.md  changelog.txt  ireal.cabal
Data/Number/: IReal.hs
Data/Number/IReal/: Auxiliary.hs  FAD.hs  FoldB.hs  Generators.hs  IReal.hs  IRealOperations.hs  IntegerInterval.hs  Rounded.hs  Scalable.hs
applications/: ClenshawCurtis.hs  ClenshawRounded.hs  Erf.hs  FAD.hs  FFT.hs  FFTRounded.hs  Integrals.hs  IntegralsRounded.hs  Logistic.hs  MoreDigits.hs  MoreDigitsRounded.hs  Newton.hs  ODE.hs  Plot.hs  Taylor.hs  Zeta.hs
doc/: ireal.tex
ireal-0.1/: LICENSE  ireal.cabal
ireal-0.1/Data/Number/: IReal.hs
ireal-0.1/Data/Number/IReal/: IReal.hs  IntegerInterval.hs  Powers.hs  UnsafeMemo.hs
ireal-0.1/applications/: LinAlg.hs  ListNumSyntax.hs  Para.hs  Taylor.hs
tests/: IRealTests.hs
